--- a/labs3.html
+++ b/labs3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="item">
-    <img src="images/demo.jpg" width="300">
+    <img src="images/demo.jpg" width="300"/>
     <p id="cv-contact">
         <span class="tieude">CONTACT</span> <br/>
         Tele : 867-398-9097 <br/>
