--- a/WEBCAFE/assignment4.html
+++ b/WEBCAFE/assignment4.html
@@ -21,7 +21,7 @@
     </div>
 
 </div>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="WEBCAFE/jquery.js"></script>
 <script type="text/javascript">
     $.ajax(
         {
