--- a/assignment5.html
+++ b/assignment5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Clothing</title>
-    <link rel="stylesheet" href="assignment5JS.css">
+    <link rel="stylesheet" href="assignment5JS.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
