--- a/assignment5.html
+++ b/assignment5.html
@@ -14,7 +14,7 @@
     <div class="content">
     </div>
 </div>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="WEBCAFE/js/jquery"></script>
 <script type="text/javascript">
     $.ajax({
         url:"https://foodgroup.herokuapp.com/api/category/3",
