--- a/assignment5.html
+++ b/assignment5.html
@@ -14,7 +14,7 @@
     <div class="content">
     </div>
 </div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js""></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
     $.ajax({
         url:"https://foodgroup.herokuapp.com/api/category/3",
