--- a/assignment5.html
+++ b/assignment5.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Clothing</title>
     <link rel="stylesheet" href="assignment5JS.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -14,7 +13,7 @@
     <div class="content">
     </div>
 </div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="WEBCAFE/jquery.js"></script>
 <script type="text/javascript">
     $.ajax({
         url:"https://foodgroup.herokuapp.com/api/category/3",
