--- a/WEBCAFE/practical.html
+++ b/WEBCAFE/practical.html
@@ -15,7 +15,7 @@
 
     </div>
 </div>
-<form action="#" method="post">
+<form action="#" method="post" id="form-login">
     <div class="form-group col-xs-12">
         <label></label>
         <i class="far fa-user"></i>
@@ -28,21 +28,27 @@
     </div>
     <div class="form-group col-xs-12">
         <label></label>
+        <div class="icon-input">
         <i class="fas fa-lock"></i>
+        </div>
         <input type="password" name="pwd2" class="form-control" placeholder="Password.." required>
     </div>
     <div class="form-group col-xs-12" >
         <label></label>
+        <div class="icon-input">
         <i class="far fa-user"></i>
+        </div>
         <input type="email" name="email" class="form-control" placeholder="Email.." required>
     </div>
     <div class="form-group col-xs-12">
+        <div class="icon-input">
         <label><input type="checkbox" name="confirm">i agree to the Terms of Service</label>
+        </div>
     </div>
     <div class="form-submit">
         <label>SIGN UP</label>
     </div>
-    <div class="form-group">
+    <div class="form-member">
         <label>Already a member?<b>Login here</b></label>
     </div>
 </form>
